--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,15 @@
         serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .hamburguer {
     width: 2rem;
     height: 2rem;
     position: fixed;
-    z-index: 100;
+    z-index: 170;
     right: 2rem;
     top: 2rem;
     display: flex;
@@ -31,6 +35,7 @@
 
 .show-menu .hamburguer {
     right: 16rem;
+
 }
 
 .line {
@@ -39,10 +44,12 @@
     background-color: #fff;
     box-shadow: 0.1rem 0.1rem 1px #000;
     transition: transform 1s;
+    z-index: 150;
 }
 
 .show-menu #line1 {
     transform: rotate(45deg) translate(0.3rem, 0.40rem);
+
 }
 
 .show-menu #line2 {
@@ -177,6 +184,7 @@ header {
     top: 0;
     right: -20rem;
     transition: all 1s;
+    z-index: 150;
 }
 
 .show-menu .sidebar {
@@ -513,7 +521,7 @@ header {
 .orcamento-wrapper {
     width: 60%;
     height: 80%;
-    background-color: #ffffffa1;
+    background-color: #ffffff99;
     border-radius: 10px;
     box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
     position: relative;
@@ -564,4 +572,52 @@ header {
     padding: 1rem;
     cursor: pointer;
     grid-column: 2;
+}
+
+footer {
+    width: 100%;
+    height: 10rem;
+    background-color: #17181b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-content p {
+    font-family: var(--font-secundary);
+    color: #a7a7a7;
+    font-size: 1.2rem;
+}
+
+.social-list a {
+    margin: 0 2rem;
+    color: #a7a7a7;
+    font-size: 1rem;
+}
+
+.social-list ul {
+    display: flex;
+}
+
+#link-topo {
+    position: fixed;
+    right: 3rem;
+    bottom: 3rem;
+    width: 2rem;
+    height: 2rem;
+    background: #ff00cc;
+    background: -webkit-linear-gradient(to right, #333399, #ff00cc);
+    background: linear-gradient(to right, #333399, #ff00cc);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: 0.3rem;
+    box-shadow: 0 0.1rem 0.6rem #00000009;
 }
