--- a/css/style.css
+++ b/css/style.css
@@ -510,7 +510,7 @@ header {
 
 .sessao-orcamento {
     width: 100%;
-    height: 100vh;
+    height: 42rem;
     background: url("../img/orcamento.jpg");
     object-fit: cover;
     display: flex;
@@ -620,4 +620,165 @@ footer {
     color: #fff;
     border-radius: 0.3rem;
     box-shadow: 0 0.1rem 0.6rem #00000009;
+}
+
+/* mobile */
+
+@media screen and (max-width: 1200px) {
+    .sessao-header {
+        margin-bottom: 3rem;
+    }
+
+    .conhecimentos {
+        height: 42rem;
+        background-color: #f5f5f5;
+    }
+
+    .conhecimento {
+        font-size: 0.9rem;
+    }
+
+    .card {
+        width: 15rem;
+        height: 22rem;
+    }
+
+    .card-info h2 {
+        font-size: 1.7rem;
+    }
+
+    .card-info h3 {
+        font-size: 1rem;
+    }
+
+    .card-info p {
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 1070px) {
+
+    .conhecimento-img-wrapper img {
+        margin-top: 5rem;
+    }
+
+    .sessao-orcamento h1 {
+        font-size: 2.5rem;
+    }
+
+    .sessao-orcamento input[type='number'] {
+        width: 2.5rem;
+        font-size: 1.8rem;
+    }
+
+    input[type='checkbox'] {
+        width: 2.1rem;
+        height: 2.1rem;
+    }
+
+}
+
+@media screen and (max-width: 850px) {
+
+    .conhecimento-img-wrapper img {
+        margin-top: 10rem;
+    }
+
+    .h1-c h1 {
+        margin-bottom: -1.5rem;
+    }
+
+    .conhecimento-header i {
+        font-size: 2rem;
+        margin-top: 2rem;
+    }
+
+    .conhecimento-header h3 {
+        font-size: 1.5rem;
+        margin-top: 2rem;
+    }
+
+    .sessao-orcamento h1 {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width: 770px) {
+
+    .card {
+        width: 12rem;
+        height: 19rem;
+    }
+
+    .card-info {
+        left: 1rem;
+        padding: 0.2rem;
+    }
+
+    .card-info h2 {
+        font-size: 1.5rem;
+    }
+
+    .card-info h3 {
+        font-size: 0.8rem;
+    }
+
+    .card-info button {
+        width: 5rem;
+        height: 1.6rem;
+        font-size: 0.7rem;
+    }
+
+    .field-label {
+        font-size: 1rem;
+    }
+
+    .btn-submit {
+        font-size: 1rem;
+        width: 18rem;
+    }
+
+    .sessao-orcamento label {
+        font-size: 1.2rem;
+    }
+
+    .orcamento-wrapper {
+        width: 35rem;
+    }
+
+    .sessao-orcamento h1 {
+        font-size: 1.5rem;
+        top: -1.8rem;
+    }
+
+    .footer-content p {
+        font-size: 0.9rem;
+    }
+
+    .conhecimentos {
+        height: 44rem;
+        background-color: #f5f5f5;
+    }
+
+    .btn-orcamento {
+        width: 8rem;
+        height: 3rem;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .banner h1 {
+        font-size: 2rem;
+    }
+
+    .banner p {
+        font-size: 1rem;
+    }
+
+    .banner button {
+        width: 8rem;
+        height: 2rem;
+        font-size: 0.5rem;
+        padding: 0;
+    }
 }
