--- a/css/style.css
+++ b/css/style.css
@@ -949,7 +949,11 @@ footer {
     .footer-content p {
         font-size: 0.6rem;
         padding-top: 2rem;
-        padding-left: 2rem;
+    }
+
+    .footer-content {
+        justify-content: center;
+        align-items: center;
     }
 
 }
